# scenario-agent-testing

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CONTRIBUTING.md  Makefile  README.md  RELEASE_PLEASE.md  pyproject.toml  pytest.ini  setup.py
.cursor/rules/: uv.mdc
.github/workflows/: conventional-commits.yml  deploy-docs.yml  docs-ci.yml  javascript-ci.yml  javascript-publish.yml  publish-debug.yml  python-ci.yml  python-publish.yml  release-please.yml  test.yml
assets/: demo.cast
docs/: .gitignore  README.md  package.json  pnpm-lock.yaml  vocs.config.ts  vocs.config.tsx
docs/docs/: layout.tsx  styles.css
docs/docs/components/: BlockLink.tsx  EmbeddedScript.tsx  GithubStars.tsx  GoogleTagScript.tsx  HStack.tsx  Image.tsx  LanguageSelector.tsx  LanguageSelectorPortal.tsx  Link.tsx  RefLink.tsx  utils.ts
docs/docs/pages/: agent-integration.mdx  community-support.mdx  index.mdx  introduction.mdx
docs/docs/pages/agent-integration/: agentkit.mdx  agno.mdx  crewai.mdx  google-adk.mdx  langgraph.mdx  litellm.mdx  mastra.mdx  openai.mdx  pydantic-ai.mdx
docs/docs/pages/basics/: cache.mdx  concepts.mdx  configuration.mdx  debug-mode.mdx  fixtures.mdx  scripted-simulations.mdx  test-runner-integration.mdx  writing-scenarios.mdx
docs/docs/pages/best-practices/: the-agent-testing-pyramid.mdx  the-vibe-eval-loop.mdx
docs/docs/pages/introduction/: getting-started.mdx  simulation-based-testing.mdx
docs/docs/pages/scenario/: cache.mdx  concepts.mdx  debug-mode.mdx  scripted-simulations.mdx  writing-scenarios.mdx
docs/docs/pages/testing-guides/: fixtures.mdx  mocks.mdx  tool-calling.mdx
docs/docs/pages/visualizations/: index.mdx
docs/pdoc_template/: html.mako
examples/: auto_reporting_example.py  test_early_stopping.py  test_false_assumptions.py  test_lovable_clone.py  test_readme_example.py  test_running_in_parallel.py  test_vegetarian_recipe_agent.py  test_weather_agent.py
examples/lovable_clone/: lovable_agent.py  print_node.py
examples/lovable_clone/template/: README.md
javascript/: .editorconfig  .gitattributes  .gitignore  .npmignore  .npmrc  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.esm.json  tsconfig.json  vitest.config.ts
javascript/.cursor/rules/: documentation.mdc  rules.mdc  testing.mdc  typescript-development.mdc
javascript/.github/workflows/: ci.yml  publish.yml
javascript/docs/: ADR-001-scenario-architecture.md  CONTRIBUTING.md  STYLE_GUIDE.md  TESTING.md
javascript/examples/vitest/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  scenario.config.js  vitest.config.ts
javascript/examples/vitest/tests/: error-handling.test.ts  false-assumptions.test.ts  grouping-scenarios.test.ts  mocked-weather-agent-tool.test.ts  multilingual-agent.test.ts  multimodal-audio-to-audio.test.ts  multimodal-audio-to-text.test.ts  (+6 more)
javascript/src/: index.ts
javascript/src/agents/: index.ts  judge-agent.ts  types.ts  user-simulator-agent.ts  utils.ts
javascript/src/config/: env.ts  get-project-config.ts  index.ts  load.ts  log-levels.ts
javascript/src/domain/: index.ts
javascript/src/events/: event-alert-message-logger.ts  event-bus.ts  event-reporter.ts  index.ts  schema.ts
javascript/src/execution/: index.ts  scenario-execution-state.ts  scenario-execution.ts
javascript/src/integrations/: index.ts
javascript/src/runner/: run.ts
javascript/src/script/: index.ts
javascript/src/utils/: config.ts  convert-core-messages-to-agui-messages.ts  ids.ts  logger.ts  message-conversion.test.ts  message-conversion.ts
python/: .env.example  CHANGELOG.md  Makefile  README.md  pyproject.toml
python/examples/: test_false_assumptions.py  test_lovable_clone.py  test_mocked_weather_agent_tool.py  test_running_in_parallel.py  test_travel_agent.py  test_vegetarian_recipe_agent.py  test_weather_agent.py
python/examples/lovable_clone/: directory_tree.py
python/examples/lovable_clone/template/: index.html
python/scenario/: __init__.py  _error_messages.py  config.py  judge_agent.py  pytest_plugin.py  scenario_executor.py  scenario_state.py  types.py  user_simulator_agent.py
python/scenario/_events/: README.md  __init__.py  event_alert_message_logger.py  event_bus.py  event_reporter.py  events.py  messages.py  utils.py
python/scenario/_generated/: .generated
python/scenario/_generated/langwatch_api_client/: README.md
python/scenario/_generated/langwatch_api_client/lang_watch_api_client/models/: __init__.py  post_api_prompts_by_id_versions_body_config_data.py
python/scenario/_utils/: __init__.py  ids.py  message_conversion.py  utils.py
python/scenario/config/: __init__.py  langwatch.py  model.py  scenario.py
python/scenario/events/: __init__.py  event_bus.py  event_reporter.py  messages.py
python/scenario/utils/: message_conversion.py
python/scripts/: generate_openapi_client.sh
python/tests/: test_event_reporter.py  test_model_config.py  test_scenario.py  test_scenario_agent.py  test_scenario_event_bus.py  test_scenario_executor.py  test_scenario_executor_events.py
scenario/: __init__.py  _utils.py  agent_adapter.py  cache.py  config.py  error_messages.py  install_with_uv.sh  judge_agent.py  pytest_plugin.py  result.py  scenario.py  scenario_agent.py  scenario_agent_adapter.py  scenario_executor.py  scenario_state.py  script.py  testing_agent.py  types.py  user_simulator_agent.py  utils.py
scenario.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scenario/_utils/: __init__.py  message_conversion.py
scenario/events/: README.md  events.py  utils.py
scenario/examples/: README.md  __init__.py  test_code_assistant.py  test_early_stopping.py
scenario/scenario/: config.py  pytest_plugin.py  scenario.py  testing_agent.py
scenario/scenario/tests/: custom_validation_example.py  sample_config.py  test_example.py
scenario/tests/: test_example.py
tests/: test_event_reporter.py  test_scenario.py  test_scenario_agent.py  test_scenario_executor.py
(+80 files in other folders)
