[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario"
version = "0.1.0"
description = "A testing library for conversational agents"
readme = "README.md"
authors = [
    {name = "Scenario Team", email = "info@scenario.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest>=7.0.0",
    "litellm>=1.10.0",
    "python-dotenv>=1.0.1",
    "termcolor>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/scenario-testing/scenario"
"Bug Tracker" = "https://github.com/scenario-testing/scenario/issues"

[tool.pytest.ini_options]
markers = [
    "agent_test: marks tests as agent scenario tests",
]
