[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langwatch-scenario"
version = "0.3.0"
description = "The end-to-end agent testing library"
readme = "README.md"
authors = [{ name = "LangWatch Team", email = "support@langwatch.ai" }]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest>=8.1.1",
    "litellm>=1.49.0",
    "python-dotenv>=1.0.1",
    "termcolor>=2.4.0",
    "pydantic>=2.7.0",
    "joblib>=1.4.2",
    "wrapt>=1.17.2",
    "pytest-asyncio>=0.26.0",
    "rich>=13.3.3,<15.0.0",
    "pksuid>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest-cov",
    "pre-commit",
    "commitizen",
]

[project.urls]
"Homepage" = "https://github.com/langwatch/scenario"
"Bug Tracker" = "https://github.com/langwatch/scenario/issues"

[tool.pytest.ini_options]
markers = ["agent_test: marks tests as agent scenario tests"]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pydantic-ai>=0.0.52",
    "pyright>=1.1.401",
    "pytest-asyncio-concurrent>=0.4.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
bump_message = "bump: version $current_version → $new_version"
major_version_zero = true
